@@ -21,7 +21,6 @@ package com.celements.mandatory;
 
 import static com.google.common.base.Strings.*;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Predicate;
@@ -57,7 +56,7 @@ public class XWikiXWikiPreferences extends AbstractMandatoryDocument {
 
   @Override
   public List<String> dependsOnMandatoryDocuments() {
-    return Collections.emptyList();
+    return List.of("celements.mandatory.MandatoryXClasses");
   }
 
   @Override
